# hunt-obelisk

./: .gitmodules  default.nix  hunttools-dicts-nonhask.nix
.obelisk/impl/: github.json
backend/: backend.cabal
backend/src/: Backend.hs
backend/src-bin/: main.hs
common/src/Common/: Route.hs
dep/gogol/: github.json
frontend/: frontend.cabal
frontend/src/: Frontend.hs  Help.hs  Types.hs
hunttools/: github.json
hunttools-dicts-if/: github.json
servant-snap/: github.json
sheetwalker/: CHANGELOG.md  sheetwalker.cabal
sheetwalker/src/: Sheetwalker.hs
static/: hunttools.css
zoomeval/: LICENSE  default.nix  run.sh  shell.nix  wrapper.nix  zoomeval.cabal
zoomeval-api/: default.nix  zoomeval-api.cabal
zoomeval-api/lib/Zoomeval/: API.hs
zoomeval-frontend/: LICENSE  default.nix  frontend.nix  jsaddle-0.9.4.0.nix  localconfig.nix  localhaskell.nix  zoomeval-frontend.cabal
zoomeval-frontend/src/: Main.hs
zoomeval/lib/: API.hs
zoomeval/lib/Zoomeval/: Eval.hs  RoundRobin.hs  Shared.hs
zoomeval/src/: Main.hs  Mueval.hs
