name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , common
               , frontend
               , obelisk-backend
               , obelisk-route
               , zoomeval
               , zoomeval-api
               , hunttools
               , hunttools-dicts-if
               , ghc
               , servant-lucid
               , servant
               , unix
               , wai
               , warp
               , servant-client
               , servant-snap
               -- , sheetwalker
               , http-client
               , http-types
               , transformers
               , stm
               , hint
               , lucid
               , containers
               , text
  exposed-modules:
    Backend
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  -- ghc-options: -dynamic
  -- executable-dynamic: True
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
               , ghc
               , servant-lucid
               , servant
               , unix
               , wai
               , warp
               , servant-client
               , http-client
               , http-types
               , transformers
               , stm
               , hint
               , lucid
               , containers
               , text
